--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "PhoenixAPI"]
 	path = PhoenixAPI
-	url = https://gitee.com/PhoenixMC/PhoenixAPI.git
+	url = https://github.com/ThePhoenixMC/PhoenixAPI.git
