Update to keep up with ThePhoenixMC/PhoenixAPI@bae7eba6b6beb8693007a659364009701a8a5619
Signed-off-by: lss233 <ls1102086624@outlook.com>

--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,8 @@
 
     <repositories>
         <repository>
-            <id>spigot-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+            <id>lss233-repo</id>
+            <url>https://lss233.com/artifactory/minecraft/</url>
         </repository>
     </repositories>
     <dependencies>
@@ -63,14 +63,14 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.12-R0.1-SNAPSHOT</version>
+            <version>1.12.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <!--Bukkit API-->
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.12-R0.1-SNAPSHOT</version>
+            <version>1.12.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
